syntax = "proto2";
package msg;
import "define.proto";

// --------------------------------------------------------------------------
/// @brief GateServer <----> LoginServer
// --------------------------------------------------------------------------
// gw请求注册到login
message GW2L_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional msg.IpHost host = 3;
    optional string name = 4;
}

// 注册返回
message L2GW_RetRegist {
    optional string errocde = 1;
    optional msg.IpHost host = 2;
}

// 心跳
message GW2L_HeartBeat {
}

// 
message L2GW_HeartBeat {
}

// 玩家登陆ls成功，注册他到相应的Gw
message L2GW_ReqRegistUser {
    optional string account = 1;
    optional int64  expire  = 2;
    optional string gatehost = 3;
    optional int32  sid = 4;     // 玩家在Login的Taskid
    optional int64  timestamp = 5;
    optional string verifykey = 6;
}

// 注册返回
message GW2L_RegistUserRet {
    optional string account  = 1;
    optional string gatehost = 2;
    optional string errcode  = 3;
    optional int32  sid = 4;
    optional string verifykey = 5;
}



// --------------------------------------------------------------------------
/// @brief GateServer <----> MatchServer
// --------------------------------------------------------------------------
// gw请求注册到match
message GW2MS_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional string agentname = 3;
    optional msg.IpHost host = 4;
}

// 注册返回
message MS2GW_RetRegist {
    optional string errcode = 1;
    optional msg.IpHost host = 2;
}

// 心跳
message GW2MS_HeartBeat {
}

// 
message MS2GW_HeartBeat {
}


// --------------------------------------------------------------------------
/// @brief GateServer <----> RoomServer
// --------------------------------------------------------------------------
// room 注册到GW
message RS2GW_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional string agentname = 3;
}

// 注册返回
message GW2RS_RetRegist {
    optional string errcode = 1;
    optional string agentname = 2;
}

// 通知RS玩家断开连接清理房间
message GW2RS_UserDisconnect {
    optional int64 userid = 1;
}

// 通知RS玩家断开连接清理房间,返回
message RS2GW_RetUserDisconnect {
    optional int64 userid = 1;
    optional string errcode = 2;
}

// 通知RS玩家上线了
message GW2RS_UserOnline {
    optional int64 userid = 1;
}


// Client消息转发到Room
message C2RS_MsgTransfer {
    optional int64 uid  = 1;
    optional string name = 2;
    optional bytes buf = 3;
}

//Room 消息转发到Client 
message RS2GW_MsgTransfer {
    optional int64 uid  = 1;
    optional string name = 2;
    optional bytes buf = 3;
}


// --------------------------------------------------------------------------
/// @brief MatchServer <----> RoomServer
// --------------------------------------------------------------------------
// room请求注册到match
message RS2MS_ReqRegist {
    optional string account = 1;
    optional string passwd  = 2;
    optional string name = 3;
}

// 注册返回
message MS2RS_RetRegist {
    optional string errcode = 1;
}

// 心跳
message RS2MS_HeartBeat {
}

// 
message MS2RS_HeartBeat {
}

//发送Gate信息给Room
message GateSimpleInfo {
    optional string name = 1;
    optional msg.IpHost host = 2;
}
message MS2RS_GateInfo {
    repeated GateSimpleInfo gates = 1;
}

// --------------------------------------------------------------------------
/// @brief MatchServer 广播消息到其他服务器
// --------------------------------------------------------------------------
message MS2Server_BroadCast {
    optional string cmd = 1;
}



